--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,41 @@
-name: Build and deploy
+name: deploy
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js
+
+      - name: Setup Node.js v12.x
         uses: actions/setup-node@v1
-      - name: Cache NPM dependencies
-        uses: actions/cache@v1
+        with:
+          node-version: '12.x'
+
+      - name: Cache node modules
+        uses: actions/cache@v2
         with:
           path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+            ${{ runner.os }}-
+
       - name: Install dependencies
         run: npm install
+
       - name: Build documentations
         run: npm run build
 
-  deploy:
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - run: cd source\docs\.vuepress\dist
-      - run: git init
-      - run: git config user.name "${{ secrets.MY_USER_NAME }}"
-      - run: git config user.email "${{ secrets.MY_USER_EMAIL }}"
-      - run: git add -A
-      - run: git commit -m "Update docs"
-      - name: Push local 'master' branch to origin 'gh-pages' branch
+      - name: Deploy the 'dist' directory
+        run: cd source\docs\.vuepress\dist
+        run: git init
+        run: git config user.name "${{ secrets.MY_USER_NAME }}"
+        run: git config user.email "${{ secrets.MY_USER_EMAIL }}"
+        run: git add -A
+        run: git commit -m "Update docs"
+        # Push local 'master' branch to origin 'gh-pages' branch
         run: git push --force "https://${{ secrets.MY_GITHUB_TOKEN }}@github.com/theme-stun/hexo-theme-stun-docs.git" master:gh-pages
